# bioexcel-exascale-co-design-benchmarks

./: LICENSE  README.md  make-tarballs.sh
CP2K/: README.md
CP2K/kernel-benchmark/: Makefile  README.md  kernel.F
CP2K/kernel-benchmark/src/: Makefile  kernel_benchmark.f90  qmmm_gpw_forces.f90
CP2K/whole-application-benchmark/: README.md  force-opt-qmmm-RESTART.wfn  force-opt-qmmm.inp  force-opt-qmmm.out
GROMACS/: README.md
GROMACS/kernel-microbenchmark/: CMakeLists.txt  datadeclarations.h
GROMACS/kernel-microbenchmark/gromacs/kernels_reference/: kernel_ref_outer.h
GROMACS/kernel-microbenchmark/gromacs/math/: functions.h
GROMACS/kernel-microbenchmark/gromacs/nbnxm/: grid.h  interaction_const.h  kernel_common.h  pairlistparams.h  pairlistset.h  pairlistsets.h
GROMACS/kernel-microbenchmark/gromacs/utility/: bitmask.h
GROMACS/kernel_microbenchmark/: CMakeLists.txt  README.md  import_files.sh  kernel_datastructure_header.h  kernel_ref.cpp  main.cpp
GROMACS/kernel_microbenchmark/gromacs/nbnxm/: atomdata.h  gridset.h  pairlist.h
GROMACS/nonbonded_benchmark/: README.md
GROMACS/nonbonded_benchmark/gromacs_regressiontests/complex/acetonitrilRF/: confout.gro  ener.edr  grompp.err  grompp.out  mdout.mdp  mdrun.out  state.cpt  topol.tpr  traj.trr
GROMACS/nonbonded_benchmark/gromacs_regressiontests/complex/aminoacids/: confout.gro  ener.edr  grompp.err  grompp.out  mdout.mdp  mdrun.out  state.cpt  topol.tpr  traj.trr
GROMACS/nonbonded_benchmark/gromacs_source_code/: INSTALL
HADDOCK/: README.md  calc-batch-hs.py
(+829 files in other folders)
